feat: post 9:  - Seguridad Multi-Tenant y JWT